workspace = { members = ["macro_utils", "tool/cargo_rpslc"] }

[package]
name = "rps_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
linkme = "0.3.20"
paste = "1.0.14"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.macro_utils]
path = "macro_utils"

[lib]
crate-type = ["rlib"]

[features]
rpsl_dylib = []
